--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
+    - name: Grant execute permission for Gradlew
+      run: chmod +x ./gradlew
+
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
@@ -44,11 +47,11 @@ jobs:
         distribution: 'temurin'
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # Setting up Gradle 7.2
+    # Setting up Gradle 7.1
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
       with:
-        gradle-version: '7.2'
+        gradle-version: '7.1'
 
     - name: Generate and submit dependency graph
       run: gradle dependencies
