--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,12 +25,15 @@ jobs:
       run: chmod +x ./gradlew
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+
+    # 新增步骤：列出 build/libs 目录内容
+    - name: List build/libs directory
+      run: ls -la build/libs
 
   dependency-submission:
 
@@ -46,7 +49,6 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # Setting up Gradle 7.1
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
