--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Auto.js-Plugin-SDK Build and Test
+name: Build Debug APK
 
 on:
   push:
@@ -10,14 +10,14 @@ on:
 
 jobs:
   build:
-    name: Build and Test
+    name: Build Debug APK
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '11'
@@ -28,21 +28,11 @@ jobs:
         with:
           android-api-level: 33
 
-      - name: Build project
+      - name: Build Debug APK
         run: ./gradlew assembleDebug
 
-      - name: Run tests
-        run: ./gradlew testDebugUnitTest
-
-      - name: Upload build artifacts
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v3
         with:
-          name: app-build
-          path: app/build/outputs/
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: test-results
-          path: app/build/test-results/
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
