--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,28 +7,29 @@ on:
 
 jobs:
   build:
+    name: Build Debug APK
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '8'
           distribution: 'adopt'
-      - id: get-project
-        name: Get project name
-        run: echo "::set-output name=PROJECT::$(cat project-to-build)"
-      - name: Clone project
-        run: git clone --depth=1 ${{ steps.get-project.outputs.PROJECT }} project
-      - name: Build the app
-        working-directory: ./project
-        run: |
-          if [ ! -f "gradlew" ]; then gradle wrapper; fi
-          chmod +x gradlew
-          ./gradlew assembleDebug --stacktrace
-      - name: Upload APK
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          android-api-level: 28
+
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
+
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v3
         with:
-          name: my-build-apk
-          path: ./**/*.apk
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
