--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,13 +1,11 @@
-name: Android CI
+nname: Android CI
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: set up JDK 11
@@ -16,8 +14,19 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Assemble APK
+      run: ./gradlew assembleRelease
+    - name: Upload app directory
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-directory
+        path: app/
+    - name: Upload sdk directory
+      uses: actions/upload-artifact@v3
+      with:
+        name: sdk-directory
+        path: sdk/
